[gd_scene load_steps=8 format=3 uid="uid://bw758t8yxr7j1"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_2fy1t"]
[ext_resource type="Script" path="res://scripts/menus/inventory_panel/item_details_panel.gd" id="2_8fu0e"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="2_l40qn"]
[ext_resource type="Texture2D" uid="uid://biscd4ubrdmwc" path="res://graphics/ui/question_mark.png" id="4_o3847"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="5_5a3sp"]
[ext_resource type="Texture2D" uid="uid://b07b3t04115ub" path="res://graphics/items/gold_coin.png" id="5_gg50a"]
[ext_resource type="PackedScene" uid="uid://fgxno6ekoy3o" path="res://prefabs/ui/inventory/item_details_panels/equipment_details_panel.tscn" id="7_10cu2"]

[node name="ItemDetailsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2fy1t")
script = ExtResource("2_8fu0e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.431373)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 1240.0
offset_bottom = 680.0

[node name="ItemName" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -325.0
offset_top = 16.0
offset_right = 325.0
offset_bottom = 66.0
grow_horizontal = 2
theme = ExtResource("2_l40qn")
bbcode_enabled = true
text = "[center]Item Name Goes Right Here[/center]"
fit_content = true

[node name="ItemSprite" type="Sprite2D" parent="Panel"]
position = Vector2(182, 80)
scale = Vector2(8, 8)
texture = ExtResource("4_o3847")

[node name="ItemType" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -137.0
offset_top = 88.0
offset_right = 137.0
offset_bottom = 122.0
grow_horizontal = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]Item Type Here[/center]"
fit_content = true

[node name="EquipmentDetailsPanel" parent="Panel" instance=ExtResource("7_10cu2")]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 135.0
offset_top = -169.0
offset_right = -135.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemEffect" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 135.0
offset_top = -100.0
offset_right = -135.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]While Equipped, Before The User's Turn Starts:
+100% Phys Atk, +100% Magic Atk, +100% Resistance, +100% Affinity, and +100% Speed[/center]"

[node name="ItemDescription" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 135.0
offset_top = 30.0
offset_right = -135.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
text = "This is a really long item description. This will help me test the Item Details Panel, which will display the details of the selected item, as well as (if in an inventory) the amount of that item that is present. The general idea is to give a lot of lore/backstory to these items, describe how they work, and maybe tell the player where they can be found! Hopefully there is enough room for all of this text, easily."

[node name="ItemCostGroup" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 55.0
offset_right = -131.0
offset_bottom = 87.0
grow_horizontal = 0

[node name="GoldSprite" type="Sprite2D" parent="Panel/ItemCostGroup"]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("5_gg50a")

[node name="ItemCost" type="RichTextLabel" parent="Panel/ItemCostGroup"]
clip_contents = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -13.0
offset_right = 128.0
offset_bottom = 13.0
grow_vertical = 2
text = "456,789"
fit_content = true

[node name="ItemCount" type="RichTextLabel" parent="Panel"]
clip_contents = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 88.0
offset_right = -129.0
offset_bottom = 114.0
grow_horizontal = 0
text = "x234 / 567"
fit_content = true

[node name="BackButton" parent="Panel" instance=ExtResource("5_5a3sp")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -52.0
offset_right = 25.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
